   files, that shows a coverage plot, along with a graphical
   representation of SNPs, and tables showing base frequencies for
   each SNP.

 * Added a new "Alignments2" track type, which is a much faster
   implementation of the "Alignments" track type.  It is more suitable
   for very deep BAM alignments, and has slightly different
   configuration variables.

 * Added a timeout to HTMLFeatures and Alignments tracks to prevent
   data-heavy tracks (like BAM tracks with very deep coverage) from
   freezing or crashing a user's browser.

 * Added an all-new data backend for name indexing, which improves the
   responsiveness of name autocompletion, and makes it possible to
   format much bigger name indexes.

 * Improved graphical look of canvas-based tracks during zoom
   operations.

 * Fixed a bug in which the Y-axis scale for feature density
   histograms was sometimes drawn incorrectly.

 * Greatly improved speed and responsiveness of BAM data backend.

 * Fixed yet another bug that prevented display of some types of BAM files.

 * Added support in HTMLFeatures and Alignments tracks for a
   `style.featureScale` configuration variable, which, if set,
   specifies a minimum zoom scale (pixels per basepair) for displaying
   features.  If zoomed out more than this (i.e. fewer pixels per bp),
   either histograms or a "too many features" message will be
   displayed.

1.7.6     2013-01-10 01:25:58 America/New_York

 * Fixed a bug in the BAM direct-access backend that prevented some
   BAM files from being displayed.

1.7.5     2012-12-12 13:40:12 America/New_York

 * Fixed a bug in which typing a key that is bound to a global
   keyboard shortcut (currently only 't' or '?') in the location box
   would erroneously execute the action for that global shortcut.
   Thanks to Gregor Rot for pointing this out.

 * Fixed a bug in which toggling 'Show labels' in the track menu did
   not re-layout the track on the first toggling.
